package edu.fiuba.algo3.modelo.Observer;

public interface Observador {
    void notificar();
}
