@startuml

interface Carta{
  + {abstract} jugarCarta(jugador, oponente: Jugador, pos: Posicion)
  + {abstract} getNombre(): String

}

interface Observador{
  + {abstract} notificar()
}

interface Observable{
  + {abstract} agregarObservador(obs: Observador)
  + {abstract} notificarObservadores()
}
ColeccionDeCartas ..|> Observable



abstract class ColeccionDeCartas{
  - cartas: List<Carta>
  - Observadores: List<Observador>

  + agregarCarta(carta: Carta)
  + agregarCarta(cartas: List<Carta>)

  + getCartas():List<Carta>
  + getCantidadCartas():Int

}

ColeccionDeCartas o-- "0..*" Observador
ColeccionDeCartas o-- "0..*" Carta



@enduml
